# translate-app

./: CHANGELOG.md  translate-app.cabal
app/: Languages.hs  Main.hs  SongKeys.hs
data/: languages.csv
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
